@startuml

package "logic"{

' User is abstract class
  abstract class User {
    -id: String
    -userName: String
    -email: String
    -password: String
    -lastName: String
    -firstName: String
  }
together{
  class Patient extends User {
    -dateOfBirth: Date
    -gender: String
    -parents: String
    -cityOfBirth: String
    -healthInsuranceNumber: String
  }


  class Coordinates {
    -address: String
    -phones: List<String>
  }

  class MedicalFile {
    -healthInsuranceNumber: String
  }

  class MedicalHistory {
    -id: String
    -diagnostic: String
    -treatement: String
    -treatingDoctor: Doctor
    -beginningOfIllness: Optional<Date>
    -endOfIllness: Optional<Date>
  }

  class MedicalVisit {
    -id: String
    -establishement: String
    -doctor: Doctor
    -dateOfVisit: Date
    -diagnostic: Optional<String>
    -treatement: Optional<String>
    -summary: String
    -notes: String
  }
}

together{
  class Doctor extends User {
  }

  class HealthCareProfessional extends User {
  }
}

  class Modification {
    -id: String
    -ModifiedMedicalFile: MedicalFile
    -date: Date
    -author: Doctor
    -ModifiedFields: Map<String, Pair<String, String>>
  }
}


Patient "1" *-- "1" Coordinates

MedicalFile "1" *-- "1" Patient
MedicalFile "1" *-- "0..*" MedicalVisit
MedicalFile "1" *-- "0..*" MedicalHistory

MedicalVisit "0..*" o-- "1" Doctor
MedicalHistory "0..*" o-- "1" Doctor
Modification "0..*" o-- "1" Doctor

MedicalFile "1" -- "0..*" Modification


@enduml
